# maestro

./: .gitignore  LICENSE  README.ko.md  README.md  maestro.yaml  maestro.yaml.example  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit-lint.sh  post-response-typecheck.sh
.github/workflows/: ci.yml  publish.yml
docs/: maestro-yaml-reference.ko.md  maestro-yaml-reference.md
docs/en/: CONFIGURATION.md  maestro-yaml-reference.md
docs/ko/: CONFIGURATION.md  README.md  maestro-yaml-reference.md
scripts/: bundle_web.sh
src/maestro/: __main__.py  api.py  approval.py  assets.py  budget.py  cli.py  conductor.py  config.py  daemon.py  dashboard.html  dispatcher.py  drive.py  embedding.py  events.py  log.py  mcp_embedding.py  mcp_store.py  models.py  notifications.py  planner.py  reconciler.py  repository.py  resources.py  runner.py  scheduler.py  schema.sql  store.py  workspace.py  worktree.py  ws.py
src/maestro/integrations/: __init__.py  linear.py  slack.py
src/maestro/prompts/: conductor.md  default.md  planner.md  planner_history_header.md  planner_instruction.md  reviewer.md
tests/: conftest.py  test_api.py  test_api_drive.py  test_api_new.py  test_approval.py  test_assets.py  test_assets_drive.py  test_budget.py  test_cli.py  test_config.py  test_daemon.py  test_dispatcher.py  test_drive.py  test_embedding.py  test_events.py  test_extract_rules_store.py  test_integration.py  test_mcp_store.py  test_models.py  test_notifications.py  test_planner.py  test_reconciler.py  test_repository.py  test_resources.py  test_runner.py  test_schedule_store.py  test_scheduler.py  test_slack_task_notification.py  test_store.py  test_store_schedule.py  test_store_slack.py  test_store_slack_notification.py  test_workspace.py  test_worktree.py  test_ws.py
tests/test_integrations/: test_linear.py  test_slack.py  test_webhook.py
web/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: ActionRequired.tsx  ActivityEvent.tsx  ActivityTimeline.tsx  AgentLogEntry.tsx  AgentLogPanel.tsx  Layout.tsx  LogContentView.tsx  PriorityIcon.tsx  ProgressIndicator.tsx  Sidebar.tsx  StatusBadge.tsx  StatusIcon.tsx  TaskBoard.tsx  TaskBoardCard.tsx  TaskListTree.tsx  TaskTree.tsx  TaskTypeBadge.tsx
web/src/components/ConductorChat/: ConductorChatBubble.tsx  ConductorChatInput.tsx  ConductorChatMessages.tsx  ConductorChatPanel.tsx  index.ts
web/src/components/dashboard/: ApprovalsWidget.tsx  AssetsWidget.tsx  ConductorSection.tsx  DashboardFeed.tsx  DashboardKpiRow.tsx  DashboardSidebar.tsx  GoalsWidget.tsx  RecentTasksSection.tsx  RunningSection.tsx  SchedulesWidget.tsx  SlackSection.tsx  SpendChart.tsx
web/src/contexts/: conductor-panel-context.tsx
web/src/hooks/: use-agent-log-stream.ts  use-conductor-stream.ts  use-websocket.ts
web/src/lib/: time.ts
web/src/pages/: Approvals.tsx  Assets.tsx  Dashboard.tsx  Goals.tsx  Rules.tsx  Schedules.tsx  Settings.tsx  TaskDetail.tsx  Tasks.tsx  Workspaces.tsx
workspaces/_base/knowledge/: brand.md  product.md
workspaces/ad-campaign/: CLAUDE.md
workspaces/ad-campaign/.claude/: mcp.json
workspaces/ad-campaign/knowledge/: guidelines.md  strategy.md
workspaces/seo/: CLAUDE.md
workspaces/seo/.claude/: mcp.json
workspaces/seo/knowledge/: guidelines.md  strategy.md
workspaces/sns-threads/: CLAUDE.md
workspaces/sns-threads/.claude/: settings.json
workspaces/sns-threads/knowledge/: guidelines.md  strategy.md  tone.md
workspaces/sns-x/: CLAUDE.md
workspaces/sns-x/.claude/: mcp.json
workspaces/sns-x/knowledge/: guidelines.md  strategy.md  tone.md
(+13 files in other folders)
