[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro"
version = "0.1.0"
description = "General-purpose task orchestration daemon"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "aioresponses>=0.7",
]

[project.scripts]
maestro = "maestro.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
