[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro"
version = "0.1.0"
description = "General-purpose task orchestration daemon"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "croniter>=2.0",
    "sqlite-vec>=0.1",
    "google-genai>=1.0",
]

[project.optional-dependencies]
slack = [
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "aioresponses>=0.7",
    "ruff>=0.8",
    "mypy>=1.10",
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
]

[project.scripts]
maestro = "maestro.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
